# go-uuid

./: .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE  doc.go  error.go  error_test.go  format.go  generator.go  generator_test.go  go.mod  implementation.go  implementation_test.go  preferences.go  preferences_test.go  slicereader.go  slicereader_test.go  slicewriter.go  slicewriter_test.go  uuid.go  uuid_test.go  variant.go  variant_test.go  version.go  version_test.go
