load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/team-spectre/go-uuid
# gazelle:build_file_name BUILD.bazel,BUILD
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "error.go",
        "format.go",
        "generator.go",
        "implementation.go",
        "preferences.go",
        "slicereader.go",
        "slicewriter.go",
        "uuid.go",
        "variant.go",
        "version.go",
    ],
    importpath = "github.com/team-spectre/go-uuid",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "error_test.go",
        "generator_test.go",
        "implementation_test.go",
        "preferences_test.go",
        "slicereader_test.go",
        "slicewriter_test.go",
        "uuid_test.go",
        "variant_test.go",
        "version_test.go",
    ],
    embed = [":go_default_library"],
)
